base/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      imagePullSecrets:
      - name: oci-registry
      containers:
        - name: ms-auth
          image: iad.ocir.io/idwwmbyiyhww/meta-ms-auth:latest
          ports:
            - containerPort: 3000
              protocol: TCP
