base/auth/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth
  namespace: meta-ms

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`auth.cmstg.metaformers.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: ms-auth
      port: 3000
